loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:8: error: 'while' expected but '}' found.
                                 } while (!crossing())
                                 ^Poucet2:8: error: ';' expected but 'while' found.
                                 } while (!crossing())
                                   ^